--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "myflix-react-client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://mtngz.github.io/myflix-react-client",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
@@ -30,9 +29,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
